first data for December 25 ITT

--- a/_posts/2025-11-19-FDIC-ITT.md
+++ b/_posts/2025-11-19-FDIC-ITT.md
@@ -5,7 +5,7 @@ title:  "December 1-5, 2025 - FDIC Introduction to Telecommunications and Networ
 
 This page links to resources that might be interesting or useful during class. **It's not an assignment and nothing here is required reading.** But as we move through the week, I'll post links related to class topics, assignments, and other interesting nuggets.
 
-- Here's the [**class Powerpoint file**](https://class.hillvt.com/assets/FDIC-ITT-20250627.pptx) from this week.
+- Here's the [**class Powerpoint file**](https://class.hillvt.com/assets/FDIC-ITT-20250627.pptx) for the week.
 
 ### Monday December 1
 
