--- a/_posts/2025-11-19-FDIC-ITT.md
+++ b/_posts/2025-11-19-FDIC-ITT.md
@@ -9,7 +9,7 @@ This page links to resources that might be interesting or useful during class. *
 
 ### Monday December 1
 
-- Do you know the company [**Cloudflare**](https://www.cloudflare.com/)? They are one of the (mostly) hidden heroes of the modern internet, and are critical to the smooth functioning of many services you and small banks use every day. But last week [**they had a big problem**](https://www.bleepingcomputer.com/news/technology/cloudflare-blames-this-weeks-massive-outage-on-database-issues/), one a a few lately. How well does that article explain what happened?
+- What do you know about [**Cloudflare**](https://www.cloudflare.com/)? They are one of the (mostly) hidden heroes of the modern internet, and are critical to the smooth functioning of many services you and small banks use every day. But last week [**they had a big problem**](https://www.bleepingcomputer.com/news/technology/cloudflare-blames-this-weeks-massive-outage-on-database-issues/), one a a few lately. How well does that article explain what happened?
 
 - You may find the story of [**Claude Shannon**](https://www.historyofdatascience.com/claude-shannon/) interesting. His work made modern data communications possible. If you prefer your history in movie form, there is a cute [**short documentary**](https://thebitplayer.com/) about him. You needn't watch the whole thing ([**it's on Amazon Prime**](https://www.amazon.com/Bit-Player-John-Hutton/dp/B08D2TXKSX/ref=sr_1_1?crid=3E4Z8DHU6MWW9&keywords=bit+player+movie&qid=1670604926&sprefix=bit+player+movie%2Caps%2C266&sr=8-1) if you want to), but you might find at least [**the trailer**](https://www.youtube.com/watch?v=E3OldEtfBrE) interesting. The flaming trumpet and AI mouse are just bonus material. And where do you think Anthropic [**got the name for their AI**](https://claude.ai/new)? (If you're on an FDIC or State computer, that last link may be broken, sorry. We'll talk about why in class...)
 
