--- a/_posts/2025-11-19-FDIC-ITT.md
+++ b/_posts/2025-11-19-FDIC-ITT.md
@@ -19,5 +19,5 @@ This page links to resources that might be interesting or useful during class. *
 
 - Here's the homepage of my little ISP in Northern Vermont: [**Mansfield Community Fiber**](https://mcfibervt.com). Is there any risk in a small bank using a startup ISP like this, and not, say, AT&T, Verizon, or Comcast?
 
-- 
+- Here's the story of [**AI Deepfaking being used for fraud**](https://www.cnn.com/2024/02/04/asia/deepfake-cfo-scam-hong-kong-intl-hnk) by faking the voices and presences of executives. The worker who transferred the money "put aside his early doubts after the video call because other people in attendance had looked and sounded just like colleagues he recognized." Whoa.
 
