--- a/_posts/2025-11-19-FDIC-ITT.md
+++ b/_posts/2025-11-19-FDIC-ITT.md
@@ -19,5 +19,13 @@ This page links to resources that might be interesting or useful during class. *
 
 - Here's the homepage of my little ISP in Northern Vermont: [**Mansfield Community Fiber**](https://mcfibervt.com). Is there any risk in a small bank using a startup ISP like this, and not, say, AT&T, Verizon, or Comcast?
 
-- Here's the story of [**AI Deepfaking being used for fraud**](https://www.cnn.com/2024/02/04/asia/deepfake-cfo-scam-hong-kong-intl-hnk) by faking the voices and presences of executives. The worker who transferred the money "put aside his early doubts after the video call because other people in attendance had looked and sounded just like colleagues he recognized." Whoa.
+-  A crazy story of [**AI Deepfaking being used for fraud**](https://www.cnn.com/2024/02/04/asia/deepfake-cfo-scam-hong-kong-intl-hnk) by faking the voices and presences of executives. The worker who transferred the money "put aside his early doubts after the video call because other people in attendance had looked and sounded just like colleagues he recognized." Whoa.
+
+### Tuesday December 2
+
+- Gah, sorry, I forgot about **T-Mobile** at the end of class on Monday! Remember that there are basically only **three** MNOs (Mobile Network Operators) in the US - Verizon, AT&T, and T-Mobile. All the other "Cellular providers" are actually not MNOs but MVNOs (Mobile Virtual Network Operators) who use the networks of the big three. [**Here's a list**](https://en.wikipedia.org/wiki/List_of_mobile_virtual_network_operators_in_the_United_States) of who uses whom. Note that sometimes an MVNO will use more than one MNO because it wants redundancy or extended geographic coverage.
+
+- Ethernet is usually considered secure because it's used in controlled physical environments, but sometimes (especially in campus or large building deployments) both ends are not as well-controlled as you'd like. [**For situations like this there's MACsec**](https://nilesecure.com/network-security/what-is-macsec).
+
+
 
