--- a/_posts/2025-11-19-FDIC-ITT.md
+++ b/_posts/2025-11-19-FDIC-ITT.md
@@ -21,11 +21,25 @@ This page links to resources that might be interesting or useful during class. *
 
 -  A crazy story of [**AI Deepfaking being used for fraud**](https://www.cnn.com/2024/02/04/asia/deepfake-cfo-scam-hong-kong-intl-hnk) by faking the voices and presences of executives. The worker who transferred the money "put aside his early doubts after the video call because other people in attendance had looked and sounded just like colleagues he recognized." Whoa.
 
+- Speaking of the physical layer, I was given [**this physical site checklist**](https://class.hillvt.com/assets/physcheck.pdf) by a student. I think it could be very useful on exams so I pass it along.
+
 ### Tuesday December 2
 
 - Gah, sorry, I forgot about **T-Mobile** at the end of class on Monday! Remember that there are basically only **three** MNOs (Mobile Network Operators) in the US - Verizon, AT&T, and T-Mobile. All the other "Cellular providers" are actually not MNOs but MVNOs (Mobile Virtual Network Operators) who use the networks of the big three. [**Here's a list**](https://en.wikipedia.org/wiki/List_of_mobile_virtual_network_operators_in_the_United_States) of who uses whom. Note that sometimes an MVNO will use more than one MNO because it wants redundancy or extended geographic coverage.
 
 - Ethernet is usually considered secure because it's used in controlled physical environments, but sometimes (especially in campus or large building deployments) both ends are not as well-controlled as you'd like. [**For situations like this there's MACsec**](https://nilesecure.com/network-security/what-is-macsec).
 
+- [**Cradlepoint**](https://cradlepoint.com/) (now owned by Ericsson) does lots of stuff, but they got their start making [**cellular failover devices and services**](https://cradlepoint.com/products/branch/branch-continuity/) for bank branches and others that need better uptime then they could get from their fixed internet service alone. We saw their devices in at least one of the topologies we looked at yesterday.
 
+-  Don't forget the very useful [What is My IP Address](https://www.whatismyip.com/) for figuring out your external IP address. How do you find your "internal" IP address?
 
+- [Downdetector](https://downdetector.com/) is a great way to know if it's you or them that are having problems.
+
+- If you're interested in more detail about how vLANs work, [**this is a pretty good illustration**](https://www.networkacademy.io/ccna/ethernet/vlan-trunking). Nice little animations too.
+
+- Not to drag out a boring topic too much, but I thought I'd mention that most important sources seem to agree that hiding your SSID doesn't do much good. I do get the attraction though.
+
+     - US-CERT says [**Disabling SSID broadcast does not prevent wireless sniffing**](https://www.cisa.gov/news-events/news/securing-wireless-networks)
+     - How-To Geek asks [**Does hiding your Wi-Fi SSID make it more secure?**](https://www.howtogeek.com/28653/debunking-myths-is-hiding-your-wireless-ssid-really-more-secure/)
+
+- The spy world has all the fun! - Here's a link to [**the Stuxnet movie** called Zero Days](https://www.amazon.com/Zero-Days-Colonel-Gary-Brown/dp/B01I2C0UV6) that we discussed (it's on Amazon Prime). It proves you don't need network access to get malware into a system if you have USB drives and some creativity. A crazy espionage story, well told. 
