--- a/_posts/2025-11-19-FDIC-ITT.md
+++ b/_posts/2025-11-19-FDIC-ITT.md
@@ -37,7 +37,7 @@ This page links to resources that might be interesting or useful during class. *
 
 - If you're interested in more detail about how vLANs work, [**this is a pretty good illustration**](https://www.networkacademy.io/ccna/ethernet/vlan-trunking). Nice little animations too.
 
-- Not to drag out a boring topic too much, but I thought I'd mention that most important sources seem to agree that hiding your SSID doesn't do much good. I do get the attraction though.
+- It seems most important sources seem to agree that hiding your SSID doesn't do much good. I do get the attraction though.
 
      - US-CERT says [**Disabling SSID broadcast does not prevent wireless sniffing**](https://www.cisa.gov/news-events/news/securing-wireless-networks)
      - How-To Geek asks [**Does hiding your Wi-Fi SSID make it more secure?**](https://www.howtogeek.com/28653/debunking-myths-is-hiding-your-wireless-ssid-really-more-secure/)  
