--- a/_posts/2025-11-19-FDIC-ITT.md
+++ b/_posts/2025-11-19-FDIC-ITT.md
@@ -19,9 +19,7 @@ This page links to resources that might be interesting or useful during class. *
 
 - Here's the homepage of my little ISP in Northern Vermont: [**Mansfield Community Fiber**](https://mcfibervt.com). Is there any risk in a small bank using a startup ISP like this, and not, say, AT&T, Verizon, or Comcast?
 
--  A crazy story of [**AI Deepfaking being used for fraud**](https://www.cnn.com/2024/02/04/asia/deepfake-cfo-scam-hong-kong-intl-hnk) by faking the voices and presences of executives. The worker who transferred the money "put aside his early doubts after the video call because other people in attendance had looked and sounded just like colleagues he recognized." Whoa.
-
-- Speaking of the physical layer, I was given [**this physical site checklist**](https://class.hillvt.com/assets/physcheck.pdf) by a student. I think it could be very useful on exams so I pass it along.
+- A crazy story of [**AI Deepfaking being used for fraud**](https://www.cnn.com/2024/02/04/asia/deepfake-cfo-scam-hong-kong-intl-hnk) by faking the voices and presences of executives. The worker who transferred the money "put aside his early doubts after the video call because other people in attendance had looked and sounded just like colleagues he recognized." Whoa.
 
 ### Tuesday December 2
 
@@ -44,3 +42,8 @@ This page links to resources that might be interesting or useful during class. *
      <br>
 
 - The spy world has all the fun! - Here's a link to [**the Stuxnet movie** called Zero Days](https://www.amazon.com/Zero-Days-Colonel-Gary-Brown/dp/B01I2C0UV6) that we discussed (it's on Amazon Prime). It proves you don't need network access to get malware into a system if you have USB drives and some creativity. A crazy espionage story, well told. 
+
+### Wednesday December 3
+
+- Speaking of the physical layer, I was given [**this physical site checklist**](https://class.hillvt.com/assets/physcheck.pdf) by a student. I think it could be very useful on exams so I pass it along here.
+
