--- a/_posts/2025-11-19-FDIC-ITT.md
+++ b/_posts/2025-11-19-FDIC-ITT.md
@@ -47,3 +47,12 @@ This page links to resources that might be interesting or useful during class. *
 
 - Speaking of the physical layer, I was given [**this physical site checklist**](https://class.hillvt.com/assets/physcheck.pdf) by a student. I think it could be very useful on exams so I pass it along here.
 
+- SD-WAN Exercise
+#### Router/firewall selection exercise, by table number:
+1. [**Cisco Meraki**](https://meraki.cisco.com/products/security-sd-wan/)
+2. [**Fortinet**](https://www.fortinet.com/blog/unified-sase)
+3. [**SonicWall**](https://www.sonicwall.com/solutions/use-cases/secure-sd-wan)
+4. [**Palo Alto**](https://www.paloaltonetworks.com/sase/sd-wan)
+5. [**Ubiquiti**](https://ui.com/us/en/cloud-gateways)
+6. [**Verizon Business**](https://www.verizon.com/business/products/networks/managed-network-services/managed-sd-wan/)
+
