--- a/_posts/2025-11-19-FDIC-ITT.md
+++ b/_posts/2025-11-19-FDIC-ITT.md
@@ -55,5 +55,6 @@ This page links to resources that might be interesting or useful during class. *
 5. [**Ubiquiti**](https://ui.com/us/en/cloud-gateways)
 6. [**Verizon Business**](https://www.verizon.com/business/products/networks/managed-network-services/managed-sd-wan/)
 
-- Here's [**the dinner plan**](https://www.mala-tang.com/), have a look and see what you think. Meet in the lobby at 6 and we'll walk over.
+- Here's [**tonight's dinner plan**](https://www.mala-tang.com/), have a look and see what you think. Meet in the lobby at 6 and we'll walk over.
 
+- I mentioned Carissa Veliz this morning, here's a great TED Talk she did on [**How Privacy Can Save Your Life**](https://www.youtube.com/watch?v=xSPRouBvgFE).
