--- a/_posts/2025-11-19-FDIC-ITT.md
+++ b/_posts/2025-11-19-FDIC-ITT.md
@@ -42,7 +42,6 @@ This page links to resources that might be interesting or useful during class. *
      <br>
 
 - The spy world has all the fun! - Here's a link to [**the Stuxnet movie** called Zero Days](https://www.amazon.com/Zero-Days-Colonel-Gary-Brown/dp/B01I2C0UV6) that we discussed (it's on Amazon Prime). It proves you don't need network access to get malware into a system if you have USB drives and some creativity. A crazy espionage story, well told. 
-
 ### Wednesday December 3
 
 - Speaking of the physical layer, I was given [**this physical site checklist**](https://class.hillvt.com/assets/physcheck.pdf) by a student. I think it could be very useful on exams so I pass it along here.
@@ -58,3 +57,26 @@ This page links to resources that might be interesting or useful during class. *
 - Here's [**tonight's dinner plan**](https://www.mala-tang.com/), have a look and see what you think. Meet in the lobby at 6 and we'll walk over.
 
 - I mentioned Carissa Veliz this morning, here's a great TED Talk she did on [**How Privacy Can Save Your Life**](https://www.youtube.com/watch?v=xSPRouBvgFE).
+
+### Thursday December 4
+
+- I might have looked a little harder for this yesterday, but Downdetector is [**actually quite trasparent**](https://downdetector.com/methodology/) about their methodology. 
+
+- As we saw in class, here's the [**SSL Labs tool**](https://www.ssllabs.com/ssltest/) that lets you see how secure a bank's (or anyone's) website is.
+
+- Here is [**a clear and simple article**](https://sookocheff.com/post/networking/how-does-tcp-work/) about how TCP does its amazing job.
+
+- Some companies are so powerful that they can just re-write lots of protocols and do things their way. That's what Google did when they developed and began using [**the QUIC protocol**](https://en.wikipedia.org/wiki/QUIC) to make up for what they perceived as weaknesses in TCP. If you ever use Google Chrome as your browser, you've almost certainly used it.
+
+- Here are a few books we discussed or that came up during class discussion:
+    - [**The Age of Survelliance Capitalism**](https://bookshop.org/p/books/the-age-of-surveillance-capitalism-the-fight-for-a-human-future-at-the-new-frontier-of-power-shoshana-zuboff/9240225?ean=9781541758001)
+    - [**Privacy is Power**](https://bookshop.org/p/books/privacy-is-power-why-and-how-you-should-take-back-control-of-your-data-carissa-veliz/15315465?ean=9781612199672)
+    - [**The Cyber Effect**](https://bookshop.org/p/books/the-cyber-effect-an-expert-in-cyberpsychology-explains-how-technology-is-shaping-our-children-our-behavior-and-our-values-and-what-w-mary-aiken/11742110?ean=9780812987478) (we didn't discuss this but it's related and great.)
+    - The [**Electronic Frontier Foundation**](https://www.eff.org/) - not a book, but worth your time and consideration if you care about stuff like this.
+
+- We briefly discussed Graphical Traceroute tools but didn't have time to play with them much. You can do it yourself with [**G Suite Tools**](https://gsuite.tools/traceroute) visual traceroute tool. Remember that DNS can be deceptive - as far as I can tell, this company has nothing to do with Google!
+
+- [**Deflock.me**](https://deflock.me/map#map=6/44.319322/-98.239746) is a crowdsourced effort to document the location of [**Flock**](https://www.flocksafety.com/) (and other) [**ALPRs**](https://sls.eff.org/technologies/automated-license-plate-readers-alprs). Given our discussion yesterday about privacy, you might be a bit concerned by the previous article. 
+
+
+
