--- a/_posts/2025-11-19-FDIC-ITT.md
+++ b/_posts/2025-11-19-FDIC-ITT.md
@@ -78,5 +78,12 @@ This page links to resources that might be interesting or useful during class. *
 
 - [**Deflock.me**](https://deflock.me/map#map=6/44.319322/-98.239746) is a crowdsourced effort to document the location of [**Flock**](https://www.flocksafety.com/) ([**and other**](https://content.newsbound.com/public/aclu/aclu_plates/index.html)) [**ALPRs**](https://sls.eff.org/technologies/automated-license-plate-readers-alprs). Given our discussion yesterday about privacy, you might be a bit concerned by this article. 
 
+- Here's a list of [**public DNS servers**](https://www.lifewire.com/free-and-public-dns-servers-2626062) you can put into you (private) machine or router. There are many improvements to be gained from using one of these over the one supplied by your ISP.
+
+- If you want to know more about cryptography, I have two books to recommend. 
+    - Bruce Schnier's [**Applied Cryptography**](https://bookshop.org/p/books/applied-cryptography-protocols-algorithms-and-source-code-in-c-bruce-schneier/2b20b21149869aa1?ean=9781119096726&next=t) is the fountainhead. But it will hurt you!
+    - The awesome [**Manga Guide to Cryptography**](https://nostarch.com/mangacrypto) which will also hurt you, but it will be more fun.
+- Tavis shared [**this great site**](https://hashingservice.com) that will let you experiment with Hash Algorithms, salts, etc. Tons of fun for those boring nights alone in your SRC room!
+
 
 
