--- a/_posts/2025-11-19-FDIC-ITT.md
+++ b/_posts/2025-11-19-FDIC-ITT.md
@@ -80,6 +80,8 @@ This page links to resources that might be interesting or useful during class. *
 
 - [**Deflock.me**](https://deflock.me/map#map=6/44.319322/-98.239746) is a crowdsourced effort to document the location of [**Flock**](https://www.flocksafety.com/) ([**and other**](https://content.newsbound.com/public/aclu/aclu_plates/index.html)) [**ALPRs**](https://sls.eff.org/technologies/automated-license-plate-readers-alprs). Given our discussion yesterday about privacy, you might be a bit concerned by this article. 
 
+### Friday December 5
+
 - Here's a list of [**public DNS servers**](https://www.lifewire.com/free-and-public-dns-servers-2626062) you can put into you (private) machine or router. There are many improvements to be gained from using one of these over the one supplied by your ISP.
 
 - If you want to know more about cryptography, I have two books to recommend. 
