first bit for Jan VPN class

--- a/_posts/2025-06-03-hold.md
+++ b/_posts/2025-06-03-hold.md
@@ -1,7 +1,6 @@
 ---
 layout: post
-title:  "More soon!"
+title:  "Happy Holidays!"
 ---
-
-- Check back a week before your scheduled class. If you have questions, email matt@hillvt.com. 
-
+- Hi everyone and happy holidays for 2025. See you in January!
+- If you're looking for course materials, check back a week before your scheduled class. If you have questions, email matt@hillvt.com. 
