first of the week

--- a/_posts/2026-01-07-VPNRA.md
+++ b/_posts/2026-01-07-VPNRA.md
@@ -4,7 +4,7 @@ title:  "January 12: FDIC VPNs and Remote Access"
 ---
 
 - My email is matt@hillvt.com, and you can call or text me on 8028990704. Contact me anytime with questions or for help.
-- Get the [latest copy of the course materials](http://class.hillvt.com/assets/FDIC-VPNRA-20260110.pptx), there won't be many changes but why not have a new one, right?
+- You can get the [**latest copy of the course materials**](http://class.hillvt.com/assets/FDIC-VPNRA-20260110.pptx) here, there won't be many changes but why not have the latest, right?
 
 ### Monday, Jan 12, 2026
 - Have a [**look at this**](https://www.youtube.com/watch?v=WVDQEoe6ZWY) if you can. It's only 8 minutes long. It's even a bit amusing.
