--- a/_posts/2026-01-07-VPNRA.md
+++ b/_posts/2026-01-07-VPNRA.md
@@ -13,3 +13,9 @@ title:  "January 12: FDIC VPNs and Remote Access"
   
 - Here's what [the FFIEC has to say about remote access](https://ithandbook.ffiec.gov/it-booklets/information-security/ii-information-security-program-management/iic-risk-mitigation/iic15-logical-security/iic15-c-remote-access/) and to a lesser extent about VPNs specifically. To what extent does this match what you see in banks?
 
+- Here's a ["Magic VPN Box" animation](https://boingit.com/fdic/fdic-vpn/MagicVPNs.mp4) of the slides I ran through in class. You might find it useful if you're not completely conversant in OSI reference model operations, or justwant a demonstration of what tunnling is.
+
+- Mark F passed along the funny Jimmy Kimmel segment on [**getting people to cough up their passwords**](https://www.youtube.com/watch?v=opRMrEfAIiI)
+
+- And Brad wanted us to see [**this interesting story of a startup ISP**](https://arstechnica.com/information-technology/2015/11/how-a-group-of-neighbors-created-their-own-internet-service/) in the Northwest (which happens to look a bit like my own beloved [**Mansfield Community Fiber**](https://mcfibervt.com/)).
+
