--- a/_posts/2026-01-07-VPNRA.md
+++ b/_posts/2026-01-07-VPNRA.md
@@ -17,5 +17,5 @@ title:  "January 12: FDIC VPNs and Remote Access"
 
 - Mark F passed along this Jimmy Kimmel segment on [**getting people to cough up their passwords**](https://www.youtube.com/watch?v=opRMrEfAIiI).
 
-- And Brad wanted us to see [**this interesting story of a startup ISP**](https://arstechnica.com/information-technology/2015/11/how-a-group-of-neighbors-created-their-own-internet-service/) in the Northwest (which happens to look a bit like my own beloved [**Mansfield Community Fiber**](https://mcfibervt.com/.))
+- And Brad wanted us to see [**this interesting story of a startup ISP**](https://arstechnica.com/information-technology/2015/11/how-a-group-of-neighbors-created-their-own-internet-service/) in the Northwest (which happens to look a bit like my own beloved [**Mansfield Community Fiber**](https://mcfibervt.com/)).
 
