--- a/_posts/2026-01-07-VPNRA.md
+++ b/_posts/2026-01-07-VPNRA.md
@@ -13,7 +13,7 @@ title:  "January 12: FDIC VPNs and Remote Access"
   
 - Here's what [**the FFIEC has to say about remote access**](https://ithandbook.ffiec.gov/it-booklets/information-security/ii-information-security-program-management/iic-risk-mitigation/iic15-logical-security/iic15-c-remote-access/) and to a lesser extent about VPNs specifically. To what extent does this match what you see in banks?
 
-- Here's a [**"Magic VPN Box" animation**](https://boingit.com/fdic/fdic-vpn/MagicVPNs.mp4) of the slides I ran through in class. You might find it useful if you're not completely conversant in OSI reference model operations, or justwant a demonstration of what tunnling is.
+- Here's a [**"Magic VPN Box" animation**](https://boingit.com/fdic/fdic-vpn/MagicVPNs.mp4) of the slides I ran through in class. You might find it useful if you're not completely conversant in OSI reference model operations, or just want a demonstration of what tunneling is.
 
 - Mark F passed along this Jimmy Kimmel segment on [**getting people to cough up their passwords**](https://www.youtube.com/watch?v=opRMrEfAIiI).
 
