--- a/_posts/2026-01-07-VPNRA.md
+++ b/_posts/2026-01-07-VPNRA.md
@@ -19,3 +19,9 @@ title:  "January 12: FDIC VPNs and Remote Access"
 
 - And Brad wanted us to see [**this interesting story of a startup ISP**](https://arstechnica.com/information-technology/2015/11/how-a-group-of-neighbors-created-their-own-internet-service/) in the Northwest (which happens to look a bit like my own beloved [**Mansfield Community Fiber**](https://mcfibervt.com/)).
 
+### Tuesday, Jan 13, 2026
+
+- This [**astonishing VPN attack**](https://arstechnica.com/security/2024/05/novel-attack-against-virtually-all-vpn-apps-neuters-their-entire-purpose/) was only discovered last year. You might call it "the revenge of DHCP."
+
+- You might not be safe with [**Remote access apps**](https://www.theregister.com/2024/06/28/teamviewer_network_breach/?td=keepreading) either.
+
