--- a/_posts/2026-01-07-VPNRA.md
+++ b/_posts/2026-01-07-VPNRA.md
@@ -37,3 +37,8 @@ title:  "January 12: FDIC VPNs and Remote Access"
 
 - Brad mentioned that Apple iMessage (their IP-based messaging client) has [**some privacy enhancements available**](https://www.wired.com/story/how-apple-advanced-data-protection-works-and-how-to-turn-it-on/), this is some of what's up with that.
 
+- There are many, many online treatments of cryptography topics. Here are a few decent ones:
+  - [**Symmetric vs Asymmetric Encryption**](https://www.techrepublic.com/article/asymmetric-vs-symmetric-encryption/)
+  - [**Public Key Infrastructure**](https://www.fortinet.com/resources/cyberglossary/public-key-infrastructure)
+  - I must admit I love Cloudflare. Explainers like these, on [**Public Key Cryptography**](https://www.cloudflare.com/learning/ssl/how-does-public-key-encryption-work/) and [**SSL Certificates**](https://www.cloudflare.com/learning/ssl/what-is-an-ssl-certificate/), are a big part of why I feel that way.
+
