--- a/_posts/2026-01-07-VPNRA.md
+++ b/_posts/2026-01-07-VPNRA.md
@@ -57,4 +57,18 @@ title:  "January 12: FDIC VPNs and Remote Access"
 
 - You can't do anything today without encountering an Artificial Intelligence angle, and [**VPNs are no exception**](https://medium.com/@44dying/the-impact-of-ai-on-vpn-security-predictive-threat-detection-and-response-d371a34c71c0). We may not see [**AI doing its work in the VPN context**](https://www.makeuseof.com/how-does-ai-work-in-vpns/), but that doesn't mean VPN and networking companies aren't using it. What could that look like for banks?
 
+- ##### Remote Access Exercise Assignments
+
+- [Group 1: Barracuda](https://www.barracuda.com/products/network-protection/secureedge/zero-trust-access)
+- [Group 2: Sonicwall](https://www.sonicwall.com/products/remote-access/)
+- [Group 3: Palo Alto](https://www.paloaltonetworks.com/sase/globalprotect)
+- [Group 4: Fortinet](https://www.fortinet.com/products/smallbusiness/sase)
+  
+##### Exercise Questions to Consider
+
+- What is the primary use case for the solution you saw?
+- To whom is it directed? That is, who are they selling it to?
+- Would it be useful in a community bank?
+- Would you be happy to see it in a bank you examined?
+- What did you personally think of the solution?
 
